force-app/main/default/objects/Employee__c/fields/Date_of_Leaving__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Leaving__c</fullName>
    <label>Date of Leaving</label>
    <type>Date</type>
</CustomField>