force-app/main/default/objects/Employee__c/fields/FA_GUID__c.field-meta.xml
<CustomField>
    <fullName>FA_GUID__c</fullName>
    <label>FA GUID</label>
    <length>60</length>
    <type>Text</type>
</CustomField>