force-app/main/default/objects/Employee__c/fields/Is_Order_Booking_Allowed__c.field-meta.xml
<CustomField>
    <fullName>Is_Order_Booking_Allowed__c</fullName>
    <label>Is Order Booking Allowed</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>