force-app/main/default/objects/Employee__c/fields/Profile_Id__c.field-meta.xml
<CustomField>
    <fullName>Profile_Id__c</fullName>
    <description>Id of the Salesforce Profile to assign when this employee is activated into a User.</description>
    <label>Profile Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>