force-app/main/default/objects/Employee__c/fields/Profile_Name__c.field-meta.xml
<CustomField>
    <fullName>Profile_Name__c</fullName>
    <description>Name of the selected Salesforce Profile (display copy of Profile_Id__c).</description>
    <label>Profile</label>
    <length>255</length>
    <type>Text</type>
</CustomField>