force-app/main/default/objects/Employee__c/fields/User_Type__c.field-meta.xml
<CustomField>
    <fullName>User_Type__c</fullName>
    <label>User Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Field</fullName><default>false</default><label>Field</label></value>
            <value><fullName>Manager</fullName><default>false</default><label>Manager</label></value>
            <value><fullName>Admin</fullName><default>false</default><label>Admin</label></value>
            <value><fullName>Back-office</fullName><default>false</default><label>Back-office</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>